<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#ffffff">
    	<LinearLayout 
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:background="#708090">
			<Button
	            android:id="@+id/bt_home"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textColor="#ffffff"
	            android:textStyle="bold"
	            android:gravity="center"
	            android:background="@drawable/btn_bg_home"/>
			<TextView 
				android:id="@+id/txt_favorite_title"
                android:textColor="#000000"
                android:textStyle="bold"
                android:layout_width="0dip" 
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:gravity="center"
                android:text="@string/txt_favorite_activity4"/>
			
			<Button
			    android:visibility="invisible"
	            android:id="@+id/bt_plus_coin"
	            android:layout_width="wrap_content"
	            android:background="@drawable/btn_bg_plus_coin"
	            android:layout_height="wrap_content"
	            android:textColor="#ffffff"
	            android:textStyle="bold"
	            android:gravity="center"/>
		</LinearLayout>
		<RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="0dip"
	        android:layout_weight="1">
		<LinearLayout
			 android:id="@+id/layout_listview_favorite"    
		     android:orientation="vertical" 
		     android:layout_width="fill_parent"
		     android:layout_height="fill_parent"
		     android:visibility="gone">
		     <ListView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:cacheColorHint="#00000000"
		        android:divider="#4aace5"
		        android:dividerHeight="0.5dp"/>
		</LinearLayout>
		<LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="visible">
            <GridView
                android:id="@+id/listview_favorite"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:horizontalSpacing="10dp"
                android:numColumns="auto_fit"
                android:stretchMode="columnWidth"
                android:verticalSpacing="10dp"/>
        </LinearLayout>
		<LinearLayout
	        android:id="@+id/layout_nodata"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:gravity="center"
			android:visibility="gone">
	        <TextView
	            android:id="@+id/txt_nodata"
	            android:text="@string/txt_main_activity2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#000000"
		        android:textSize="13dp"/>
    </LinearLayout>     
	</RelativeLayout>
	<LinearLayout 
	    android:id="@+id/action_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:visibility="gone" >
		<Button
            android:id="@+id/bt_all_select"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/txt_continue_activity4"
            android:textSize="17sp"
            android:textColor="@drawable/btn_text_selector"
            android:background="@drawable/btn_rounded_corner"/>
        <Button
            android:id="@+id/bt_play_video"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/txt_continue_activity6"
            android:textSize="17sp"
            android:textColor="@drawable/btn_text_selector"
            android:background="@drawable/btn_rounded_corner"/>
        <Button
            android:visibility="gone"
            android:id="@+id/bt_play_media"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textSize="17sp"
            android:textColor="@drawable/btn_text_selector"
            android:background="@drawable/btn_rounded_corner"/>
         <Button
            android:visibility="gone"
            android:id="@+id/bt_favorite_delete"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/txt_favorite_activity5"
            android:textSize="11dp"
            android:textColor="#000000"/>
	</LinearLayout>
	 <RelativeLayout
          android:id="@+id/ad_layout"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content" 
          android:layout_gravity="center_horizontal"> 
     </RelativeLayout>
   	<RelativeLayout
   	      android:visibility="gone" 
	      android:id="@+id/admob_native"
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:layout_gravity="center_horizontal"
	      android:gravity="center"> 
    </RelativeLayout>
</LinearLayout>