<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#ffffff">
    	<LinearLayout 
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
			android:background="#708090">
			<Button
			    android:visibility="invisible"
	            android:id="@+id/bt_plus_coin"
	            android:layout_width="wrap_content"
	            android:background="@drawable/btn_bg_plus_coin"
	            android:layout_height="wrap_content"
	            android:textColor="#ffffff"
	            android:textStyle="bold"
	            android:gravity="center"
	            android:layout_marginLeft="10dip"/>
			<TextView
			     android:id="@+id/txt_main_title"
                 android:textColor="#000000"
                 android:textStyle="bold"
                 android:layout_width="0dip" 
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:singleLine="true"
                 android:gravity="center"/>
			<Button
	            android:id="@+id/bt_intent_favorite"
	            android:layout_width="wrap_content"
	            android:layout_height="fill_parent"
	            android:textColor="@drawable/btn_text_selector"
            	android:background="#708090"
	            android:textStyle="bold"
	            android:text="@string/txt_main_activity40"
	            android:gravity="center"/>
			<Button
			    android:visibility="gone"
	            android:id="@+id/bt_category"
	            android:layout_width="wrap_content"
	            android:background="@drawable/btn_bg_category"
	            android:layout_height="wrap_content"
	            android:textColor="#ffffff"
	            android:textStyle="bold"
	            android:paddingRight="20dip"
	            android:gravity="center"/>
		</LinearLayout>
		<RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="0dip"
	        android:layout_weight="1">
		<LinearLayout
			 android:id="@+id/layout_listview_main"    
		     android:orientation="vertical" 
		     android:layout_width="fill_parent"
		     android:layout_height="fill_parent"
		     android:visibility="gone">
		     <ListView
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
		        android:cacheColorHint="#00000000"
		        android:divider="#4aace5"
		        android:dividerHeight="0.5dp"/>
		</LinearLayout>
		
		<LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:visibility="visible">
            <GridView
                android:id="@+id/listview_main"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:horizontalSpacing="10dp"
                android:numColumns="auto_fit"
                android:stretchMode="columnWidth"
                android:verticalSpacing="10dp"/>
        </LinearLayout>
		<LinearLayout
	        android:id="@+id/layout_nodata"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent"
			android:gravity="center"
			android:visibility="gone">
	        <TextView
	            android:id="@+id/txt_nodata"
	            android:text="@string/txt_main_activity2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#000000"
		        android:textSize="13dp"/>
         </LinearLayout>
         <LinearLayout
                android:visibility="gone" 
                android:orientation="vertical"
                android:id="@+id/layout_progress" 
                android:layout_width="fill_parent" 
                android:layout_height="wrap_content" 
                android:layout_centerInParent="true" 
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true">
          <ProgressBar
                android:layout_gravity="center" 
                android:id="@android:id/progress"
                android:paddingLeft="10.0dip"
                android:paddingRight="10.0dip"
                android:layout_width="wrap_content" 
                android:layout_height="wrap_content" 
                style="?android:progressBarStyle" />
          </LinearLayout>           
	</RelativeLayout>
	<LinearLayout 
	    android:id="@+id/action_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:visibility="visible" >
         <Button
            android:id="@+id/bt_all_select"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/txt_continue_activity4"
            android:textSize="17sp"
            android:textColor="@drawable/btn_text_selector"
            android:background="@drawable/btn_rounded_corner"/>
        <Button
            android:id="@+id/bt_play_video"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/txt_continue_activity6"
            android:textSize="17sp"
            android:textColor="@drawable/btn_text_selector"
            android:background="@drawable/btn_rounded_corner"/>
        <Button
            android:visibility="gone"
            android:id="@+id/bt_play_media"
            android:layout_width="0dip"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:textSize="17sp"
            android:textColor="@drawable/btn_text_selector"
            android:background="@drawable/btn_rounded_corner"/>
	</LinearLayout>
	<LinearLayout 
			android:orientation="horizontal"
			android:layout_width="fill_parent"
			android:layout_height="50dip"
			android:gravity="center">
         	<ImageButton 
	            android:id="@+id/bt_home"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginRight="10dip"
	            android:background="@drawable/btn_bg_home"/>
			<EditText 
				android:id="@+id/edit_searcher"
				android:textSize="13dp"
				android:hint="@string/txt_search_hint"
				android:layout_width="0dip"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:imeOptions="actionDone"
				android:paddingLeft="10dip"/>
			<ImageButton 
	            android:id="@+id/bt_search_result"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dip"
	            android:background="@drawable/btn_bg_search"/>
		</LinearLayout>  
		
	<RelativeLayout
          android:id="@+id/ad_layout"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content" 
          android:layout_gravity="center_horizontal"> 
    </RelativeLayout>
    
	<RelativeLayout
   	      android:visibility="gone" 
	      android:id="@+id/admob_native"
	      android:layout_width="match_parent"
	      android:layout_height="wrap_content"
	      android:layout_gravity="center_horizontal"
	      android:gravity="center"> 
    </RelativeLayout>
</LinearLayout>